--- a/src/index.css
+++ b/src/index.css
@@ -5,18 +5,26 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  background-color: var(--dark-primary);
+  box-sizing: border-box;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --dark-primary: #082f49;
+  --light-primary: #f0f9ff;
+  --light-secondary: #cbd5e1;
+  --accent: #fde68a;
+  --btn-disabled: #a8a29e;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  margin: 0 auto;
+  /* display: flex; */
+  /* place-items: center; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  max-width: 1200px;
+  /* min-width: 1200px; */
+  /* min-height: 100vh; */
 }
